<resources>
    <string name="app_name">Registration</string>
    <string name="full_app_name">Chronokeep Registration</string>
    <string name="searching">Searching…</string>
    <string name="refresh">Refresh</string>
    <string name="participants">Participants</string>
    <string name="menu_manage_api">Manage API</string>
    <string name="menu_control">Server Controls</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_about">About</string>
    <string name="menu_unpin">Unpin Screen</string>
    <string name="menu_pin">Pin Screen</string>
    <string name="wait_connecting">Attempting to connect to server.</string>
    <string name="wait_wait">Please wait.</string>
    <string name="menu_api_control">API Controls</string>
    <string name="menu_api_remote_uploads">Remote Upload</string>
    <string name="menu_api_auto_upload_off">Turn Auto Upload On</string>
    <string name="menu_api_auto_upload_on">Turn Auto Upload Off</string>

    <string name="loading">Loading</string>
    <string name="nothing_found">No API Found</string>
    <string name="next">Next</string>
    <string name="change">Change</string>
    <string name="reads">Chip Reads</string>
    <string name="search">Search</string>

    <string name="device_time">Device Time</string>
    <string name="portal_time">Portal Time</string>

    <string name="previous_start">From</string>
    <string name="previous_end">To</string>
    <string name="previous_time">Time</string>
    <string name="date">Date</string>
    <string name="set_today">Today</string>
    <string name="set_yesterday">Yesterday</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>

    <string name="set_time">Set Time</string>
    <string name="get_time">Get Time</string>

    <string name="api_name">API Name</string>
    <string name="type">Type</string>
    <string name="key">Key</string>
    <string name="url">URL</string>

    <string name="api_type_chronokeep_results">Chronokeep Results</string>
    <string name="api_type_chronokeep_results_self">Chronokeep Results Self Hosted</string>
    <string name="api_type_chronokeep_remote">Chronokeep Remote</string>
    <string name="api_type_chronokeep_remote_self">Chronokeep Remote Self Hosted</string>

    <string-array name="api_types">
        <item>@string/api_type_chronokeep_results</item>
        <item>@string/api_type_chronokeep_results_self</item>
        <item>@string/api_type_chronokeep_remote</item>
        <item>@string/api_type_chronokeep_remote_self</item>
    </string-array>

    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="non_binary">Non-Binary</string>
    <string name="other">Other</string>

    <string-array name="genders">
        <item />
        <item>@string/man</item>
        <item>@string/woman</item>
        <item>@string/non_binary</item>
        <item>@string/other</item>
    </string-array>

    <string name="sli_unique_token">Unique Token: %1$s</string>

    <string name="dash"> - </string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="working">Working</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="edit">Edit</string>
    <string name="readers">Readers</string>
    <string name="carat_up">&#8743;</string>
    <string name="carat_down">&#8744;</string>
    <string name="add">Add</string>
    <string name="back">Back</string>

    <string name="midnight">00:00:00</string>
    <string name="almost_midnight">23:59:59</string>
    <string name="get_previous">Fetch Old</string>

    <string name="restart">Restart Server</string>
    <string name="update">Update Server</string>
    <string name="quit">Stop Server</string>
    <string name="shutdown">Shutdown Server</string>
    <string name="settings">Settings</string>
    <string name="clear_reads">Clear Reads</string>

    <string name="setting_name">Portal Name</string>
    <string name="setting_sighting_period">Sighting Period</string>
    <string name="setting_read_window">Read Window</string>
    <string name="setting_chip_type">Chip Type</string>
    <string name="setting_chip_type_dec">Dec</string>
    <string name="setting_chip_type_hex">Hex</string>
    <string name="setting_play_sound">Play Sound on Read?</string>
    <string name="setting_volume">Volume</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="setting_voice_emily">Emily</string>
    <string name="setting_voice_michael">Michael</string>
    <string name="setting_voice_custom">Custom</string>
    <string name="setting_upload_interval">Upload Interval</string>

    <string-array name="chip_types">
        <item>@string/setting_chip_type_dec</item>
        <item>@string/setting_chip_type_hex</item>
    </string-array>

    <string-array name="voices">
        <item>@string/setting_voice_emily</item>
        <item>@string/setting_voice_michael</item>
        <item>@string/setting_voice_custom</item>
    </string-array>

    <string name="tag_button">button</string>
    <string name="tag_web">webtag</string>
    <string name="save_username">Save Email</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="logging_in">Logging in…</string>
    <string name="select_event">Select an event:</string>

    <string name="about_version">v0.1.1</string>
    <string name="about_created_by">Created By</string>
    <string name="about_creator_name">James Sentinella</string>

    <string name="seen">#</string>
    <string name="bib">Bib</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="time">Time</string>

    <string name="chip">Chip</string>
    <string name="antenna">Ant</string>
    <string name="reader">Reader</string>
    <string name="rssi">RSSI</string>
    <string name="name_placeholder">%1$s %2$s</string>

    <string name="reader_name">Reader Name</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="reader_kind">Reader Type</string>
    <string name="reader_kind_zebra">Zebra</string>
    <string name="reader_kind_impinj">Impinj</string>
    <string name="reader_kind_rfid">RFID Timing</string>
    <string-array name="reader_kinds_array">
        <item>@string/reader_kind_zebra</item>
    </string-array>

    <string name="delete">Delete</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="change_start_time">Change Start Time</string>
    <string name="change_start_date">Change Start Date</string>
    <string name="change_end_time">Change End Time</string>
    <string name="change_end_date">Change End Date</string>
    <string name="change_time">Change Time</string>
    <string name="change_date">Change Date</string>

    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>

    <string name="manual_entry">Manual Entry</string>
    <string name="age_gender">Age:Gender</string>
    <string name="distance">Distance</string>
    <string name="sightings">Sightings</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="portal_version">Portal Version</string>
    <string name="portal_version_template">%1$s</string>
    <string name="new_string">New</string>
    <string name="sms_enabled">Send Text Message on Finish</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="change_birthdate">Change Birthdate</string>
    <string name="mobile">Mobile Phone Number</string>
    <string name="apparel">T-shirt</string>

    <string name="assign_bib">Assign Bib</string>
    <string name="edit_participant">Edit Participant</string>

    <string name="web_registration">Web Registration</string>
</resources>