<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="4"
        android:layout_marginStart="5dp"
        >
        <TextView
            android:id="@+id/part_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/part_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/part_bib"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginStart="5dp"
        android:layout_gravity="center_vertical"
        android:text="@string/bib"
        />
    <TextView
        android:id="@+id/part_shirt"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginStart="5dp"
        android:layout_gravity="center_vertical"
        android:text="@string/apparel"
        />
    <TextView
        android:id="@+id/part_age"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginStart="5dp"
        android:layout_gravity="center_vertical"
        android:text="@string/age"
        />
    <TextView
        android:id="@+id/part_gender"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginStart="5dp"
        android:layout_gravity="center_vertical"
        android:text="@string/gender"
        />
</GridLayout>