<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/search_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/show_only_bibs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageView
            android:id="@+id/search_mag_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/search"
            android:src="@drawable/search"
            app:layout_constraintEnd_toStartOf="@id/search_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.chronokeep.registration.layouts.ClearEditText
            android:id="@+id/search_box"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@id/add_participant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:inputType="text"
            />
        <Button
            android:id="@+id/add_participant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/new_string"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <GridLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/part_name"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="4"
            android:layout_marginStart="5dp"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/part_bib"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="5dp"
            android:text="@string/bib"
            />
        <TextView
            android:id="@+id/part_shirt"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/apparel"
            />
        <TextView
            android:id="@+id/part_age"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="5dp"
            android:text="@string/age"
            />
        <TextView
            android:id="@+id/part_gender"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="5dp"
            android:text="@string/gender"
            />
    </GridLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/participants_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>