<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:maxWidth="475dp"
    android:padding="15dp"
    android:layout_gravity="center"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/info_holder"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="75dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/participant_name"
                android:textSize="45sp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/name"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/participant_distance"
                android:textSize="25sp"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/distance"
                android:layout_marginBottom="5dp"
                />
            <View
                android:layout_height="1dp"
                android:layout_width="300dp"
                android:background="@color/darkColorBackgroundHighlight"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/apparel"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:id="@+id/participant_apparel"
                android:textSize="25sp"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/apparel"
                android:layout_marginBottom="5dp"
                />
            <View
                android:layout_height="1dp"
                android:layout_width="300dp"
                android:background="@color/darkColorBackgroundHighlight"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bib"
                android:layout_marginBottom="5dp"
                android:labelFor="@id/edit_participant_bib"
                android:textSize="25sp"
                />
            <EditText
                android:id="@+id/edit_participant_bib"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:inputType="number"
                android:autofillHints="bib"
                android:textAlignment="center"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sms_enabled"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/sms_enabled"
                app:switchPadding="5dp"
                android:theme="@style/ThemeOverlay.MySwitchCompat"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/mobile"
                android:layout_marginBottom="5dp"
                android:labelFor="@id/edit_participant_mobile"
                />
            <EditText
                android:id="@+id/edit_participant_mobile"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:inputType="phone"
                android:autofillHints="mobile phone"
                android:textAlignment="center"
                />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_marginTop="-70dp"
        >
        <Button
            android:id="@+id/submit_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>