<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="70sp"
        android:id="@+id/serverlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="75dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/topBar"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/buttonBarStyle"
        >
        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searching"
                android:contentDescription="@string/searching"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                />
            <ProgressBar
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginStart="5sp"
                android:indeterminateTint="@color/primary"
                />
        </LinearLayout>
        <Button
            android:visibility="gone"
            android:tag="@string/tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refreshButton"
            android:text="@string/refresh"
            android:layout_centerInParent="true"
            android:layout_marginTop="7sp"
            android:layout_marginBottom="7sp"
            tools:ignore="ButtonStyle" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>